# beerated-backend

./: .drone.yml  .env  Cargo.toml  Dockerfile  Dockerfile-release
src/: main.rs
src/routes/: beer.rs  mod.rs  session.rs  user.rs
src/services/: beer.rs  session.rs  user.rs
